improve chat creation
