# backend/api/router/chat.py
@@ -2,7 +2,7 @@ import json
 
 from api.logic.chat_logic import ChatLogic
 from api.router.auth_utils import RouterAuthUtils
-from api.router.models import NewChatMessage
+from api.router.models import ChatCreationInfo, NewChatMessage
 from api.storage.models import User
 from fastapi import Depends, Request, WebSocket, WebSocketDisconnect
 from fastapi.responses import HTMLResponse
@@ -50,8 +50,8 @@ async def websocket_endpoint(websocket: WebSocket, access_token: str = ""):
             del active_connections[user.id]
         print(f"WebSocket connection closed for user {user.id}")
 
-@router.post("/api/chat/new")
-async def create_chat(request: Request, user: User = Depends(RouterAuthUtils.get_current_user)) -> dict:
+@router.post("/api/chat/get-or-create")
+async def get_or_create_chat(chat_info: ChatCreationInfo, user: User = Depends(RouterAuthUtils.get_current_user)) -> dict:
     """
     Create a new chat between two users.
 
@@ -61,19 +61,12 @@ async def create_chat(request: Request, user: User = Depends(RouterAuthUtils.get
     Returns:
         dict: A dictionary containing the chat ID and other relevant information.
     """
-    data = await request.json()
-    # TODO: can potentially use obfuscated user ID
-    # to prevent user from having to know the ID of the other user
-    other_id = data.get("other_id")
-    chat = ChatLogic.get_or_create_private_chat(user.id, other_id)
-
-    return chat
+    return ChatLogic.get_or_create_private_chat(user.id, chat_info.other_user_id)
 
 
 @router.get("/api/chat/{id}")
 async def get_chat_messages(id: int, user: User = Depends(RouterAuthUtils.get_current_user), created_before: str = None, limit: int = 50) -> dict:
-    res = await ChatLogic.get_private_chat_history(id, user.id, created_before, limit)
-    return res
+    return ChatLogic.get_private_chat_history(id, user.id, created_before, limit)
 
 # route for updating state of chat as read
 @router.post("/api/chat/{id}/read")
@@ -87,7 +80,7 @@ async def mark_chat_as_read(id: int, user: User = Depends(RouterAuthUtils.get_cu
     Returns:
         dict: A dictionary indicating success or failure.
     """
-    await ChatLogic.mark_chat_as_read(id, user.id)
+    ChatLogic.mark_chat_as_read(id, user.id)
     return {"status": "success", "message": "Chat marked as read."}
 
 @router.get("/api/chats")
@@ -100,7 +93,7 @@ async def get_chats(user: User = Depends(RouterAuthUtils.get_current_user)) -> d
     Returns:
         dict: A dictionary containing the list of chats.
     """
-    return await ChatLogic.get_private_chats(user.id)
+    return ChatLogic.get_private_chats(user.id)
 
 
 html = """
